modification de design

--- a/JobboardFront/src/app/pages/auth/signup/signup.component.css
+++ b/JobboardFront/src/app/pages/auth/signup/signup.component.css
@@ -100,7 +100,7 @@
 .btn {
   width: 90%;
   padding: 12px;
-  background: #B16668;
+  background: #455A64;
   color: white;
   font-size: 16px;
   border: 2px solid white;
