--- a/JobboardFront/src/app/pages/dash/admin/admin.component.css
+++ b/JobboardFront/src/app/pages/dash/admin/admin.component.css
@@ -2,13 +2,13 @@
   padding: 2rem;
   font-family: Arial, sans-serif;
   background-color: #fff;
-  color: #455A64; /* Gris bleuté */
+  color: #455A64;
 }
 
 h1 {
   font-size: 2.5rem;
-  color: #74417D; /* Violet foncé */
-  margin-bottom: 2rem;
+  color: #74417D;
+  margin-bottom: 25px;
 }
 
 .card-container {
@@ -51,10 +51,11 @@ h1 {
   padding: 1rem 2rem;
   color: white;
   font-family: sans-serif;
+
 }
 
 .navbar-logo {
-  margin-right: 40rem;
+  margin-right: 30rem;
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -82,7 +83,7 @@ activeTab:hover {
 
 .dashboard-card .icon {
   font-size: 40px;
-  color: #74417D;
+  color: #8C4E97;
   margin-bottom: 10px;
 }
 .navbar .icon{
@@ -126,7 +127,7 @@ activeTab:hover {
 
 .modal-header h3 {
   font-size: 1.4rem;
-  color: #74417D;
+  color: #8C4E97;
   margin: 0;
 }
 
@@ -160,57 +161,128 @@ activeTab:hover {
 
 .modal-body input:focus {
   outline: none;
-  border-color: #74417D;
+  border-color: #CF95D9;
 }
 
 .btn {
   margin-top: 10px;
   padding: 10px;
-  background-color: #74417D;
-  color: white;
-  border: none;
+  background-color: white;
+  color: #8C4E97;
+  border-color: #8C4E97;
   border-radius: 10px;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.btn-offer{
+  background-color:  #8C4E97;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+  width:100px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 10px;
 
-.btn:hover {
-  background-color: #5f3466;
+}
+
+.btn-offer:hover {
+
+  background-color: #CF95D9;
+
+}
+
+h3{
+  color:#8C4E97;
+
+
 }
 
 @keyframes fadeIn {
   from { opacity: 0; transform: scale(0.95); }
   to { opacity: 1; transform: scale(1); }
 }
-.card {
-  background-color: white;
-  border: 2px solid #74417D;
-  border-radius: 12px;
-  padding: 1.5rem;
-  flex: 1 1 250px;
-  max-width: 1000px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  transition: transform 0.2s ease-in-out;
-  cursor: pointer;
+.list{
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.main{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
 }
-.filter{
+
+
+.table-wrapper {
+  max-height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #fff;
+  font-family: 'Segoe UI', sans-serif;
+  box-shadow: 0 0 15px rgba(0,0,0,0.05);
+  border-radius: 12px;
+}
+
+
+
+thead {
+  background-color: #8C4E97;
+  font-weight: bold;
+  text-align: left;
+  color: white;
+}
+
+th, td {
+  padding: 8px 16px;
+  border-bottom: 1px solid #eaeaea;
+  font-size: 14px;
+}
+
+
+tbody tr:last-child td {
+  border-bottom: none;
+}
+
+
+tbody tr:hover {
+  background-color: #f9f9f9;
+}
+
+
+.filter {
+  margin-bottom: 16px;
+  padding: 8px 12px;
   width: 100px;
-  padding: 6px 10px;
-  margin-bottom: 10px;
-  font-size: 10px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  transition: border 0.3s ease, box-shadow 0.3s ease;
-
 }
-
-.main {
+.title {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+.back-btn {
+  background-color: transparent;
+  border: none;
+  font-size: 1.3rem;
+  cursor: pointer;
+  color: #8C4E97;
+  margin-right: 5px;
+  transition: color 0.3s ease;
 }
 
+.back-btn:hover {
+  color:  #CF95D9;
+}
