--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
@@ -1,8 +1,5 @@
-
-
 <div class="job-container">
-
-    <div class="search-bar">
+    <div class="sidebar">
       <div class="search-bar">
         <div class="input-icon">
           <i class="fas fa-search"></i>
@@ -28,7 +25,6 @@
     </div>
 
     <div class="content">
-
         <div class="filters">
             <h3>Filter</h3>
             <ul>
@@ -42,7 +38,6 @@
                 </li>
             </ul>
         </div>
-
 
       <div class="job-list">
         <div *ngFor="let job of filteredJobs" class="job-card">
