--- a/JobboardFront/src/styles.css
+++ b/JobboardFront/src/styles.css
@@ -41,3 +41,13 @@ html, body {
   color: #fff !important;
 }
 
+
+.transparent-navbar {
+  background-color: transparent;
+}
+
+.gray-navbar {
+  background-color: #EBEBEB;
+
+}
+
