--- a/JobboardFront/src/app/pages/offres/job-details/job-details.component.html
+++ b/JobboardFront/src/app/pages/offres/job-details/job-details.component.html
@@ -1,19 +1,48 @@
-<div class="job-details">
-  <div class="content">
-    <div class="left">
-      <h2>{{ job?.title }}</h2>
-      <p><strong>Company:</strong> {{ job?.company }}</p>
-      <p><strong>Location:</strong> {{ job?.location }}</p>
-      <p><strong>Contract Type:</strong> {{ job?.contractype }}</p>
-      <p><strong>Salary:</strong> {{ job?.salary }} €</p>
-      <p><strong>Description:</strong> {{ job?.description }}</p>
-      <div class="btns">
-        <button routerLink="/offers" class="btn-off">Back to Jobs</button>
-        <button class="save">Save</button>
-      </div>
+<div class="job-details-container">
+  <div class="job-main">
+    <button class="back-btn"  routerLink="/offers">
+      <i class="fas fa-arrow-left"></i>
+    </button>
+    <h1>Job offer details</h1>
+    <div class="job-header">
+      <span class="badge">{{ job.contractype }}</span>
+      <span class="badge">{{ job.location }}</span>
     </div>
-    <div class="right">
-      <img src="/offer.gif" class="offer" />
+    <h2>{{ job.title }}</h2>
+    <p class="company-name"><i class="fas fa-building"></i> {{ job.company }}</p>
+    <h3>Description</h3>
+    <p>{{ job.description }}</p>
+  </div>
+
+  <div class="job-sidebar">
+    <h3>Offer information </h3>
+    <div class="info-block">
+      <i class="fas fa-map-marker-alt"></i>
+      <strong>Location</strong>
+      <p>{{ job.location }}</p>
+    </div>
+
+    <div class="info-block">
+      <i class="fas fa-briefcase"></i>
+      <strong>Type</strong>
+      <p>{{ job.contractype }}</p>
+    </div>
+
+    <div class="info-block">
+      <i class="fas fa-calendar-alt"></i>
+      <strong>Publication date</strong>
+      <p>{{ job.publishedAt }}</p>
+    </div>
+
+    <div class="info-block">
+      <i class="fas fa-calendar-times"></i>
+      <strong>Deadline</strong>
+      <p>{{ job.deadline }}</p>
+    </div>
+
+    <div class="buttons">
+    <button  class="action1">Save</button>
+    <button class="action">Go to offer</button>
     </div>
   </div>
 </div>
