--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.css
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.css
@@ -1,48 +1,35 @@
-.background-image {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 1800px;
-  height: 900px;
-  transform: translate(-50%, -50%);
-  filter: blur(3px);
-  z-index: -1;
-  object-fit: cover;
-}
-
 .content {
   display: flex;
   flex-grow: 1;
   margin-top: 10px;
   height: calc(100vh - 60px);
   min-width:calc(100vh - 60px) ;
+  min-height: calc(100vh - 60px);
+
+
 }
 
-@keyframes gradientShift {
-  0% {
-    background-position: 0% 50%;
-  }
-  100% {
-    background-position: 100% 50%;
-  }
-}
 
-.sidebar {
-  background: linear-gradient(-45deg, #d4b4da, #cf82e3, #d1d5d8);
-  background-size: 300% 300%;
-  animation: gradientShift 10s ease infinite;
-}
+
 
 .job-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(-45deg, #f4ddf8, #ddcae1, #e6f2f8);
-  background-size: 300% 300%;
-  animation: gradientShift 10s ease infinite;
-
 
 }
+
+
+@keyframes moveStars {
+  from {
+    background-position: 0 0, 25px 25px;
+  }
+  to {
+    background-position: 1000px 1000px, 1025px 1025px;
+  }
+}
+
+
 .box {
   background-color: white;
   padding: 40px;
@@ -50,7 +37,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   width: 1000px;
   height: 500px;
-  max-width: 90%;
+  max-width: 100%;
   text-align: center;
   display: flex;
 }
@@ -62,10 +49,11 @@
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  background: transparent;
+
   position: relative;
   gap: 10px;
   width: 48%;
+
 
 
 
@@ -85,9 +73,6 @@
     }
   }
 }
-
-
-
 .filters {
   width: 15%;
   min-width: 200px;
@@ -105,13 +90,13 @@
   h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: #74417D;
+    color: #8C4E97;
   }
 
   ul {
     list-style: none;
     padding: 0;
-    color: #74417D;
+    color: #8C4E97;
 
     li {
       cursor: pointer;
@@ -120,7 +105,7 @@
       transition: background-color 0.3s ease;
 
       &:hover {
-        background-color: #74417D;
+        background-color: #8C4E97;
         color: white;
       }
 
@@ -135,19 +120,17 @@
 .job-list {
   width: 75%;
   margin-left: 5%;
-  overflow: auto;
+  overflow: scroll;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 80px;
   align-items: stretch;
-  min-width: 1290px;
-
 
   h3{
-    color: #74417D;
+    color: #8C4E97;
   }
   i{
-    color: #74417D;
+    color: #455A64;
   }
 }
 
@@ -168,12 +151,12 @@
 
 
   &:hover {
-    border-color: #74417D;
+    border-color: #8C4E97;
   }
 }
 
 .see {
-  background-color:#74417D;
+  background-color:#8C4E97;
   color: white;
   border: none;
   padding: 8px 15px;
@@ -199,7 +182,7 @@
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
-  color: #74417D;
+  color: #455A64;
   font-size: 16px;
 }
 
