--- a/JobboardFront/src/app/navbar/navbar.component.css
+++ b/JobboardFront/src/app/navbar/navbar.component.css
@@ -1,58 +1,52 @@
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.2rem 2rem;
-  color: #8C4E97;
-  background: transparent;
+.navbar {
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
-  backdrop-filter: blur(8px);
-  border-bottom: #CF95D9 solid 1px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem 4rem;
+  z-index: 10;
+  background-color:#ead6ed;
+  overflow: auto;
 }
+
+.logo-img {
+  width: 32px;
+  height: 32px;
+}
+
 .navbar-logo {
-  font-size: 1.5rem;
-  font-weight: bold;
   display: flex;
   align-items: center;
-  gap: 8px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #8C4E97;
+  gap: 10px;
 }
 
 .navbar-links {
   list-style: none;
   display: flex;
-  gap: 50px;
+  gap: 2.5rem;
 }
 
 .navbar-links a {
   text-decoration: none;
   color: #8C4E97;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 1.1rem;
-  transition: color 0.3s ease;
+  padding: 0.5rem 0.8rem;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+  margin-right: 20px;
 }
 
 .navbar-links a:hover,
 .navbar-links a.active {
-  color: #CF95D9;
-}
-.navbar-links button{
-  color: #8C4E97;
-  margin-left: 10rem;
-  margin-right: 1rem;
-  background-color: white;
-  width: 100px;
-  height: 30px;
-  border-radius: 15px;
-  font-size: 14px;
-  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid #CF95D9;
-  cursor: pointer;
-
+  color: #74417D;
 }
-.navbar-links button:hover {
-  transform: scale(1.1);
 
-}
