--- a/JobboardFront/src/app/pages/home/home.component.css
+++ b/JobboardFront/src/app/pages/home/home.component.css
@@ -1,81 +1,208 @@
 .home-container {
+  background: no-repeat top;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  overflow: hidden;
+  height: 100%;
+  margin-bottom: 150px;
+
 }
 
-/* Bulle en fond */
-.home-container::before {
-  content: '';
+.wave-bg {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background: url('/back.png') no-repeat top right;
-  background-size: cover;
-  z-index: 0; /* Augmenté pour passer au-dessus de la navbar */
-  opacity: 1;
+  width: 100%;
+  height: auto;
+  z-index: -1;
 }
 
-
-
-/* Flex global */
-.content-wrapper {
+.home-content-wrapper {
   position: relative;
   z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5rem;
   height: 100%;
-  padding: 2rem 5rem;
 }
 
-/* Texte à gauche */
-.content {
+
+.home-text {
   flex: 1;
+  padding-right: 2rem;
+  margin-bottom: 5rem;
 }
 
-.content h1 {
-  font-size: 2.5rem;
-  color: #74417D;
+.home-text h1 {
+  font-size: 3rem;
+  color: #8C4E97;
   margin-bottom: 1rem;
+  font-weight: 800;
 }
 
-.content p {
-  font-size: 1.2rem;
+.home-text p {
+  font-size: 1.1rem;
   color: #455A64;
+  line-height: 1.2;
   margin-bottom: 2rem;
 }
 
-.cta-btn {
-  background-color: #CF95D9;
+.home-btn {
+  background-color: #8C4E97;
+  color: #fff;
+  padding: 0.8rem 1.6rem;
+  font-size: 1rem;
   border: none;
-  padding: 0.75rem 1.5rem;
-  border-radius: 8px;
-  color: white;
-  font-weight: bold;
+  border-radius: 30px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background 0.3s;
 }
 
-.cta-btn:hover {
-  background-color: #b46bc3;
+.home-btn:hover {
+  background-color: #CF95D9;
 }
 
-
-.illustration {
+.home-image {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.illustration img {
-  width: 100%;
-  max-width: 450px;
-  z-index: -1;
+.home-image img {
+  max-width: 88%;
+  height: auto;}
+
+
+.about-section {
   position: relative;
+  z-index: 1;
+  padding: 100px 30px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  scroll-margin-top: 80px;
+  border-radius: 12px;
+  max-width: 1000px;
+  margin: -120px auto 0 auto;
+
 }
+.about-section h2 {
+  font-size: 32px;
+  color: #8C4E97;
+  margin-bottom: 40px;
+}
+
+.about-section p {
+  font-size: 18px;
+  max-width: 700px;
+  margin:  20px auto;
+  color: #333;
+
+}
+.highlighted-jobs {
+  margin-top: 80px;
+  text-align: center;
+  padding: 40px;
+  background:#ead6ed;
+
+
+
+}
+
+.highlighted-jobs h2 {
+  color: #8C4E97;
+  margin-bottom: 30px;
+}
+
+.job-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.job-card {
+  background: white;
+  padding: 15px;
+  border-radius: 10px;
+  width: 280px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.see {
+  background-color: #8C4E97;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+.view-all-container {
+margin-top: 50px;
+display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.view-all-btn {
+  background-color: #8C4E97;
+  color: white;
+  border: none;
+  padding: 10px 25px;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 15px;
+  cursor: pointer;
+  margin-left: 600px;
+  transition: 0.3s ease;
+}
+
+.view-all-btn:hover {
+  background-color: #8C4E97;
+}
+.job-list {
+  h3{
+    color: #8C4E97;
+  }
+  i{
+    color: #455A64;
+  }
+}
+.footer {
+  background-color: #455A64;
+  color: white;
+  padding: 30px 20px 15px;
+  font-family: 'Segoe UI', sans-serif;
+  max-height: 140px;
+
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+
+}
+
+.footer-left h3 {
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.footer-left p {
+  font-size: 14px;
+  line-height: 1.6;
+  max-width: 500px;
+}
+.footer-bottom {
+
+  text-align: center;
+  font-size: 13px;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  padding-top: 10px;
+}
+
+
