--- a/JobboardFront/src/app/pages/offres/job-details/job-details.component.css
+++ b/JobboardFront/src/app/pages/offres/job-details/job-details.component.css
@@ -3,6 +3,7 @@
   gap: 2rem;
   padding: 2rem;
   flex-wrap: wrap;
+  margin-top: 5rem;
 }
 .job-main i {
   color: #74417D;
@@ -30,7 +31,7 @@ h1 {
 .job-sidebar {
   border: solid #74417D;
   flex: 1;
-  background: #f9f9f9;
+  background: white;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.05);
