--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.css
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.css
@@ -8,18 +8,13 @@
 
 
 }
-
-
-
-
 .job-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 90px;
 
 }
-
-
 @keyframes moveStars {
   from {
     background-position: 0 0, 25px 25px;
@@ -28,8 +23,6 @@
     background-position: 1000px 1000px, 1025px 1025px;
   }
 }
-
-
 .box {
   background-color: white;
   padding: 40px;
@@ -41,22 +34,15 @@
   text-align: center;
   display: flex;
 }
-
-
 .search-bar {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
-
-  position: relative;
   gap: 10px;
   width: 48%;
-
-
-
-
   .search {
     background-color: #CF95D9;
     width: 100px;
@@ -84,9 +70,6 @@
   flex-shrink: 0;
   position: relative;
   border: 2px solid #CF95D9;
-
-
-
   h3 {
     font-size: 18px;
     margin-bottom: 10px;
@@ -120,7 +103,7 @@
 .job-list {
   width: 75%;
   margin-left: 5%;
-  overflow: scroll;
+  overflow-y: scroll;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 80px;
@@ -154,7 +137,6 @@
     border-color: #8C4E97;
   }
 }
-
 .see {
   background-color:#8C4E97;
   color: white;
@@ -176,7 +158,6 @@
   width: 250px;
   margin: 0 20px;
 }
-
 .input-icon i {
   position: absolute;
   top: 50%;
