--- a/JobboardFront/src/styles.css
+++ b/JobboardFront/src/styles.css
@@ -3,9 +3,16 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
+body::-webkit-scrollbar {
+  display: none;              /
+}
 
 .toast-center-custom {
   top: 10% !important;
