--- a/JobboardFront/src/app/pages/dash/admin/admin.component.html
+++ b/JobboardFront/src/app/pages/dash/admin/admin.component.html
@@ -18,7 +18,7 @@
     <button class="activeTab" (click)="activeTab = 'offres'">
       <i class="fas fa-briefcase"></i> Job Offers
     </button>
-    <button class="activeTab" [routerLink]="'/'">
+    <button class="activeTab" [routerLink]="'/home'">
       <i class="fas fa-home"></i> Home
     </button>
 
