--- a/JobboardFront/src/app/pages/dash/profile/profile.component.css
+++ b/JobboardFront/src/app/pages/dash/profile/profile.component.css
@@ -5,10 +5,10 @@
   color: #455A64;
 }
 
-h1 {
-  font-size: 2.5rem;
+.dashboard-container i{
+  font-size: 1.5rem;
   color: #74417D;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .card-container {
@@ -118,8 +118,11 @@ nav-btn:hover {
   font-family: "Roboto", sans-serif;
   color: #454545;
 }
-.profile-container h1{
-  font-family: "Roboto", sans-serif;
+.profile-container i{
+
+  align-items: center;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
   color: #74417D;
 }
 .profile-header {
@@ -150,10 +153,11 @@ nav-btn:hover {
   align-items: center;
   display:flex;
 }
-.photo-upload i{
+.fas fa-user{
   color: #74417D;
   margin-bottom: 0.1rem;
   margin-right: 0.5rem;
+  font-size: 0.2rem;
 }
 
 .upload-label {
@@ -352,5 +356,114 @@ input[type="file"] {
   color: #888;
   font-size: 0.95rem;
 }
+.favorites-container {
+  padding: 2rem;
+  max-width: 90%;
+  min-height: 100%;
+  margin: 30px 120px;
+  overflow-x: auto;
+}
+
+.fas fa-heart{
+ align-items: center;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #74417D;
+}
+
+
+.favorites-grid {
+  display: flex;
+  margin-top: 40px;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: flex-start;
+  overflow-x: auto;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+
+.favorite-card {
+  flex: 1 1 calc(25% - 1rem);
+  min-width: 220px;
+  max-width: 200px;
+  background: #fff;
+  border-radius: 12px;
+  border: 2px solid #CF95D9;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.2s ease;
+}
+
+.favorite-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
+  border: 2px solid #74417D;
+}
+
+.favorite-card h3 {
+  font-size: 1.1rem;
+  color: #455A64;
+  margin-bottom: 0.5rem;
+}
+
+.favorite-card a {
+  text-decoration: none;
+  color: #74417D;
+  font-weight: 500;
+  margin-bottom: 0.8rem;
+}
+
+.favorite-card a:hover {
+  text-decoration: underline;
+}
+
+
+.favorite-card .delete-btn {
+  background: transparent;
+  border: none;
+  color: #74417D;
+  cursor: pointer;
+  font-size: 1.2rem;
+  align-self: flex-end;
+  transition: color 0.3s ease;
+}
+
+.favorite-card .delete-btn:hover {
+  color: #cf95D9;
+}
+.see-offer-btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  max-width: 100px;
+  color: #74417D;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+
+
+
+@media (max-width: 768px) {
+  .favorite-card {
+    flex: 1 1 calc(50% - 1rem);
+  }
+}
+
+@media (max-width: 480px) {
+  .favorite-card {
+    flex: 1 1 100%;
+  }
+}
+
+
 
 
