--- a/JobboardFront/src/app/pages/offres/job-details/job-details.component.html
+++ b/JobboardFront/src/app/pages/offres/job-details/job-details.component.html
@@ -41,8 +41,9 @@
     </div>
 
     <div class="buttons">
-    <button  class="action1">Save</button>
-    <button class="action">Go to offer</button>
+      <button (click)="saveToFavorites(job)"> Save</button>
+
+      <button class="action">Go to offer</button>
     </div>
   </div>
 </div>
